[gd_scene load_steps=6 format=2]

[ext_resource path="res://scenes/CharacterScreen.gd" type="Script" id=1]
[ext_resource path="res://scenes/player/Player.tscn" type="PackedScene" id=2]

[sub_resource type="StyleBoxFlat" id=1]

[sub_resource type="Environment" id=4]
background_mode = 1
background_color = Color( 0.92549, 0.862745, 0.862745, 1 )
ambient_light_color = Color( 0.639216, 0.254902, 0.254902, 1 )

[sub_resource type="World" id=3]
environment = SubResource( 4 )

[node name="CharacterScreen" type="Node2D"]
script = ExtResource( 1 )

[node name="Create Character" type="Button" parent="."]
margin_left = 1122.0
margin_top = 852.0
margin_right = 1271.0
margin_bottom = 877.0
rect_scale = Vector2( 2.5, 2.5 )
custom_colors/font_color_focus = Color( 1, 1, 1, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0, 1, 0.298039, 1 )
custom_colors/font_color_pressed = Color( 0, 1, 0.298039, 1 )
text = "Create New Character"

[node name="Back" type="Button" parent="."]
margin_left = 456.0
margin_top = 852.0
margin_right = 605.0
margin_bottom = 877.0
rect_scale = Vector2( 2.5, 2.5 )
custom_colors/font_color_focus = Color( 1, 1, 1, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0, 1, 0.298039, 1 )
custom_colors/font_color_pressed = Color( 0, 1, 0.298039, 1 )
text = "Back to Main Menu"

[node name="ScrollContainer" type="ScrollContainer" parent="."]
margin_left = 327.0
margin_top = 77.0
margin_right = 903.0
margin_bottom = 758.0
custom_styles/bg = SubResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="ScrollContainer"]
margin_right = 576.0
margin_bottom = 681.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 80
custom_constants/margin_top = 30
custom_constants/margin_left = 80

[node name="CharacterList" type="VBoxContainer" parent="ScrollContainer/MarginContainer"]
margin_left = 80.0
margin_top = 30.0
margin_right = 496.0
margin_bottom = 681.0
custom_constants/separation = 60
alignment = 1

[node name="ViewportContainer" type="ViewportContainer" parent="."]
margin_left = 948.0
margin_top = 87.0
margin_right = 1448.0
margin_bottom = 747.0

[node name="Viewport" type="Viewport" parent="ViewportContainer"]
size = Vector2( 500, 660 )
world = SubResource( 3 )
handle_input_locally = false
render_target_update_mode = 3

[node name="Player" parent="ViewportContainer/Viewport" instance=ExtResource( 2 )]
scale = Vector2( 4, 4 )

[connection signal="pressed" from="Create Character" to="." method="_on_Create_Character_pressed"]
[connection signal="pressed" from="Back" to="." method="_on_Back_pressed"]
